--- a/thesis.tex
+++ b/thesis.tex
@@ -72,7 +72,8 @@
 \newcommand{\TeV}{\ensuremath{\,\text{Te\hspace{-.08em}V}}\xspace}
 \newcommand{\TeVns}{\ensuremath{\text{Te\hspace{-.08em}V}}\xspace} % no leading thinspace
 
-\newcommand{\lumifinal}{$19.4\fbinv$} %{1048~\pbinv}}
+\newcommand{\lumi}{$19.8\fbinv$} %{1048~\pbinv}}
+\newcommand{\fbinv}{\ensuremath{fb^{-1}\xspace}} %{1048~\pbinv}}
 \newcommand{\updated}{\textcolor{green}{This has been updated to the full luminosity}}
 \newcommand{\notupdated}{\textcolor{red}{Not updated (possibly can't be updated ATM)}}
 \newcommand{\significanceNumber}{$2.5\sigma$\xspace}
@@ -115,7 +116,9 @@
 \newcommand{\sEight}{\ensuremath{\sqrt{s}=8\TeV}\xspace}
 \newcommand{\lepSec}{The applied lepton selection changed in the \sEight-MC with respect to the \sSeven-MC}
 
-\newcommand{\EM}{\ensuremath{\Pe^\pm\Pgm^\mp}\xspace}
+\newcommand{\EM}{\ensuremath{e^\pm\mu^\mp}\xspace}
+\newcommand{\EE}{\ensuremath{e^\pm e^\mp}\xspace}
+\newcommand{\MM}{\ensuremath{\mu^\pm\mu^\mp}\xspace}
 
 %PAS things
 \newcommand{\Ht}{\HT}
