--- a/thesis.bib
+++ b/thesis.bib
@@ -367,3 +367,11 @@ author = "R. Fr{\"u}hwirth"
       month         = "Mar",
       year          = "2007",
 }
+@article{PDG,
+	author			= "{K.A. Olive et al. (Particle Data Group)}",
+	journal			= "{Chin. Phys. C}",
+	volume			= 38,
+	year 			= 2014,
+	number			= 090001,
+	
+}
